Fixed sidebar toggle on mobile (#518)
* Fixed sidebar toggle on mobile

* Better Z-index

* Disable horizontal scroll

* If menu is open, we should be able to scroll x

--- a/website/assets/style/contribute.scss
+++ b/website/assets/style/contribute.scss
@@ -2,6 +2,9 @@
     position: absolute;
     top: 0;
     right: 0;
+    overflow: hidden;
+    height: 120px;
+    width: 120px;
 
     .contribute-badge {
         position: absolute;
